build_error.log
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/9.4.0/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 

> Configure project :
Fabric Loom: 1.10.1

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///data/data/com.termux/files/home/snakqproject/build/reports/problems/problems-report.html

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.4.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
1 actionable task: 1 executed
/data/data/com.termux/files/home/snakqproject/src/main/java/com/snakq/client/gui/HUD.java:23: error: ';' expected
        matrices.peek().getMatrix(), buffer.end();
                                   ^
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  /data/data/com.termux/files/home/snakqproject/src/main/java/com/snakq/client/gui/HUD.java:23: error: ';' expected
          matrices.peek().getMatrix(), buffer.end();
                                     ^
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

BUILD FAILED in 13s
